<!--
  ~ /**
  ~  * Copyright (C) 2018-2019 DataSwift Ltd
  ~  *
  ~  * SPDX-License-Identifier: MPL2
  ~  *
  ~  * This file is part of the Hub of All Things project (HAT).
  ~  *
  ~  * This Source Code Form is subject to the terms of the Mozilla Public
  ~  * License, v. 2.0. If a copy of the MPL was not distributed with this
  ~  * file, You can obtain one at http://mozilla.org/MPL/2.0/
  ~  */
  -->

<ScrollView xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
            android:layout_width="match_parent" android:fillViewport="true" android:clipToPadding="true"
            android:id="@+id/scrollView2">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent" android:background="#eeeeee">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_height"
                android:paddingTop="@dimen/bar_padding"
                android:background="@color/toolbar_color"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >
            <ImageView
                    android:id="@+id/back_button_login" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="0dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:src="@drawable/back_arrow_toolbar"
                    tools:layout_editor_absoluteY="38dp"/>

            <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="LOGIN"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_medium" tools:layout_editor_absoluteY="46dp"
                    tools:layout_editor_absoluteX="95dp"/>
        </androidx.appcompat.widget.Toolbar>

        <include
                layout="@layout/error_message"
                android:id="@+id/errorIncl"
                android:layout_height="45dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hatNameLogin"
                    android:text="@string/log_in_with_hat_url"
                    android:textSize="22sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/loginViewDarkBlue"
                    app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
                    app:layout_constraintBottom_toTopOf="@+id/loginSubTxt"
                    android:layout_marginTop="72dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintWidth_max="400dp"
                android:text="@string/your_domain_will_appear_after_you_enter_your_name"
                android:textAlignment="center"
                android:fontFamily="@font/roboto"
                android:textColor="@color/loginViewSubtitleLight"
                app:layout_constraintTop_toBottomOf="@+id/hatNameLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="37dp"
                android:id="@+id/loginSubTxt"/>
        <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                      app:layout_constraintWidth_max="450dp"
                      android:orientation="horizontal" app:layout_constraintTop_toBottomOf="@+id/loginSubTxt"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent" android:id="@+id/loginEditextsLayout"
                      app:layout_constraintBottom_toTopOf="@+id/nextLoginBtn"
                      app:layout_constraintVertical_bias="0.0" android:layout_marginTop="33dp"
                      android:layout_marginBottom="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:id="@+id/loginUrlLayout"
                    android:orientation="horizontal"
                    android:visibility="visible">

                <EditText
                        android:id="@+id/hatNameEt"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_hat_url"
                        android:layout_weight="0.6"
                        android:ems="10"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/yourname"
                        android:inputType="textPersonName|textNoSuggestions"
                        android:maxLength="22"
                        android:textAllCaps="false"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:textColor="#4a556b"
                        android:textSize="14sp"/>

                <EditText
                        android:id="@+id/hatDomainEt"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_hat_domain"
                        android:layout_weight="0.4"

                        android:enabled="false"
                        android:ems="10"
                        android:focusable="false"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/yourhatdomain"
                        android:inputType="text"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:textColor="#4a556b"
                        android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginEmailLayout"
                    android:orientation="horizontal"
                    tools:visibility="gone">

                <EditText
                        android:id="@+id/hatEmailEt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_hat_url"
                        android:ems="10"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="Email address"
                        android:inputType="textEmailAddress"
                        android:textAllCaps="false"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:textColor="#4a556b"
                        android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>


        <Button
                android:id="@+id/nextLoginBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="400dp"

                android:enabled="true"
                android:text="@string/next"
                android:stateListAnimator="@null"

                android:background="@drawable/button_enabled_rounded"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:fontFamily="@font/roboto_medium"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/loginEditextsLayout"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="400dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/afterTappingNextTxt"
                android:text="@string/tapping_next"
                android:textAlignment="center"
                android:textColor="@color/loginViewSubtitleLight"
                android:fontFamily="@font/roboto"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/nextLoginBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:id="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/afterTappingNextTxt"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintWidth_max="400dp"
                android:background="#20000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>

        <TextView
                android:text="OR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginOrTxt"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:textColor="@color/loginViewSubtitleLight"
                android:fontFamily="@font/roboto"/>

        <Button
                android:text="LOG IN WITH EMAIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="400dp"
                android:id="@+id/loginChangeLoginStateBtn"
                android:background="@drawable/button_login_change_state"
                android:stateListAnimator="@null"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/loginOrTxt"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorButtonEnabled"/>

        <TextView
                android:text="Don’t have an account? Create one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginSignupNewAccount"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/loginChangeLoginStateBtn"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/loginViewSubtitleLight"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>