<!--
  ~ /**
  ~  * Copyright (C) 2018-2019 DataSwift Ltd
  ~  *
  ~  * SPDX-License-Identifier: MPL2
  ~  *
  ~  * This file is part of the Hub of All Things project (HAT).
  ~  *
  ~  * This Source Code Form is subject to the terms of the Mozilla Public
  ~  * License, v. 2.0. If a copy of the MPL was not distributed with this
  ~  * file, You can obtain one at http://mozilla.org/MPL/2.0/
  ~  */
  -->

<ScrollView xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
            android:layout_width="match_parent" android:fillViewport="true" android:clipToPadding="true"
            android:id="@+id/scrollView2">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent" android:background="#eeeeee">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_height"
                android:paddingTop="@dimen/bar_padding"
                android:background="@color/toolbar_color"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        >
            <ImageView
                    android:id="@+id/back_button_login" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="0dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:src="@drawable/back_arrow_toolbar"
                    tools:layout_editor_absoluteY="38dp"/>

            <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="LOGIN"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_medium" tools:layout_editor_absoluteY="46dp"
                    tools:layout_editor_absoluteX="95dp"/>
        </androidx.appcompat.widget.Toolbar>
        <include
                layout="@layout/error_message"
                android:id="@+id/errorIncl"
                android:layout_height="45dp"
                android:layout_width="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/my_toolbar" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" android:layout_marginTop="72dp"
                app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/loginUserDomainTxtLayout"
                app:layout_constraintBottom_toTopOf="@+id/loginSubTxt">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/hatNameLogin"
                      android:text="yourname"
                      android:textSize="20sp" android:fontFamily="@font/roboto_bold"
                      android:textColor="@color/loginViewDarkBlue"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/hatDomainLogin"

                      android:text=".hubat.net" android:textSize="20dp" android:fontFamily="@font/roboto_light"
                      android:textColor="@color/loginViewDarkBlue"/>
        </LinearLayout>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:paddingStart="20dp"
                  android:paddingEnd="20dp"
                  app:layout_constraintWidth_max="400dp"


                  android:text="Please enter your HAT name and select your domain to confirm access to your HAT Microserver."
                  android:textAlignment="center" android:fontFamily="@font/roboto"
                  android:textColor="@color/loginViewSubtitleLight"
                  app:layout_constraintTop_toBottomOf="@+id/loginUserDomainTxtLayout"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="37dp"
                  android:id="@+id/loginSubTxt"/>
        <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                      app:layout_constraintWidth_max="450dp"

                      android:orientation="vertical" app:layout_constraintTop_toBottomOf="@+id/loginSubTxt"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent" android:id="@+id/loginEditextsLayout"
                      app:layout_constraintBottom_toTopOf="@+id/nextLoginBtn"
                      app:layout_constraintVertical_bias="0.0" android:layout_marginTop="33dp"
                      android:layout_marginBottom="10dp">
            <EditText
                    android:id="@+id/hatNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/enter_hat_name"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:maxLength="22"
                    android:textAllCaps="false"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp" android:textColor="#4a556b" android:textSize="14sp"/>
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="1dp">

                <EditText
                        android:id="@+id/hatDomainEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#ffffff"
                        android:ems="10"
                        android:focusable="false"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/select_hat_domain"
                        android:inputType="text"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp" android:textColor="#4a556b" android:textSize="14sp"/>

                <ImageButton
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:id="@+id/domainBtn"
                        android:layout_alignParentEnd="true"
                        android:background="@android:color/transparent"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="22dp"
                        android:src="@drawable/icon_right_arrow"/>
            </RelativeLayout>
        </LinearLayout>


        <Button
                android:id="@+id/nextLoginBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="400dp"

                android:enabled="false"
                android:text="@string/next"
                android:stateListAnimator="@null"

                android:background="@drawable/button_disabled_rounded"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:fontFamily="@font/roboto_medium" android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                android:layout_marginBottom="96dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="400dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/afterTappingNextTxt"
                android:text="@string/tapping_next"
                android:textAlignment="center" android:textColor="@color/loginGreyLight172"
                android:fontFamily="@font/roboto_light"
                android:textSize="12sp" app:layout_constraintTop_toBottomOf="@+id/nextLoginBtn"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>